# super-octo-bassoon

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  commitlint.config.js  package-lock.json  package.json  pyproject.toml  setup.sh
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md  semantic.yml
.github/release-please/: config.json
.github/workflows/: ci-cd.yml  commitlint.yml  pr-title-lint.yml  release-please.yml
src/super_octo_bassoon/: __init__.py  cli.py  hello.py
tests/: __init__.py  test_cli.py  test_hello.py
